test/analyze/type_check/super/basic.exp
Error: Expected type `Bool` but found `SubType1`
test/analyze/type_check/super/basic.myte:30:5-16
 30 |     (super.foo(): Bool);
    |      ^^^^^^^^^^^

Error: Expected type `Unit` but found `Long`
test/analyze/type_check/super/basic.myte:36:5-14
 36 |     (super.foo: Unit);
    |      ^^^^^^^^^

Error: Expected type `Unit` but found `RecordLikeTrait1`
test/analyze/type_check/super/basic.myte:37:5-10
 37 |     (super: Unit);
    |      ^^^^^

Error: Cannot access super method since `inherited` is not overridden by this type
test/analyze/type_check/super/basic.myte:44:4-19
 44 |     super.inherited();
    |     ^^^^^^^^^^^^^^^

Error: Cannot resolve method with name `nonexist` in super traits of type `Type1`
test/analyze/type_check/super/basic.myte:49:4-9
 49 |     super.nonexist();
    |     ^^^^^

Error: `super` can only be used when accessing a method
test/analyze/type_check/super/basic.myte:53:4-9
 53 |     super;
    |     ^^^^^

Error: `super` can only be used when accessing a method
test/analyze/type_check/super/basic.myte:54:8-13
 54 |     use(super); 
    |         ^^^^^

Error: Cannot resolve method with name `field` in super traits of type `Type1`
test/analyze/type_check/super/basic.myte:58:5-10
 58 |     (super.field: Unit);
    |      ^^^^^

Error: Cannot resolve method with name `field` in super traits of type `Type1`
test/analyze/type_check/super/basic.myte:59:4-9
 59 |     super.field = ();
    |     ^^^^^

Error: Cannot resolve method with name `field` in super traits of type `Type1`
test/analyze/type_check/super/basic.myte:62:4-9
 62 |     super.field = 1;
    |     ^^^^^

Error: No implemented method with name `a` found in super traits
test/analyze/type_check/super/basic.myte:78:4-11
 78 |     super.a();
    |     ^^^^^^^

Error: No implemented method with name `b` found in super traits
test/analyze/type_check/super/basic.myte:79:4-11
 79 |     super.b();
    |     ^^^^^^^

Error: Cannot resolve method with name `c` in super traits of type `This: Trait3`
test/analyze/type_check/super/basic.myte:83:4-9
 83 |     super.c();
    |     ^^^^^